# Topo-Learn-Agent

./: .gitignore  .prettierignore  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  requirements.txt  start.sh
app/api/: router.py
app/core/: config.py  exceptions.py
app/db/: neo4j.py
app/models/: sm2_progress.py  user.py
app/schemas/: document_schema.py  quiz_schema.py
app/services/: ingestion_svc.py  (+3 more)
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  worker.Dockerfile  worker.cpu.Dockerfile
backend/app/ai_modules/audio/: scene_split.py  whisper_asr.py
backend/app/ai_modules/llm/: gemini_client.py  prompts.py
backend/app/ai_modules/vision/: table_tf.py  yolo_layout.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/: auth.py  dashboard.py  document.py  graph.py  health.py  quiz.py  review.py  ws.py
backend/app/core/: celery_app.py  config.py  rate_limit.py  security.py
backend/app/db/: neo4j.py  postgres.py
backend/app/models/: __init__.py  document.py  sm2_progress.py  user.py
backend/app/schemas/: document_schema.py  graph_schema.py  quiz_schema.py
backend/app/services/: graph_svc.py  graph_tasks.py  ingestion_svc.py  recommendation_svc.py  s3_svc.py  sm2_svc.py  tutor_svc.py  ws_manager.py
backend/scripts/: download_models.py  train_yolo.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_document.py
backend/tests/test_services/: test_sm2.py  test_tutor.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
(+48 files in other folders)
