[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topo-learn-agent"
version = "1.0.0"
description = "Backend for Intelligent Learning Systems using Knowledge Graph & AI"
authors = [
    { name = "Nguyễn Văn Đức", email = "nguyenvanduc13475@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]